tests/render/snapshots/render__migrated_v1_trace__curl_get_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                         command │ curl https://example.com
                                          parser │ gnu  flags permute
  65: (rule "curl"                               │
        (when (and                               │
               (not (flag "d"))                  │
               (not (flag "data"))               │
               (not (flag "X"))                  │
               (not (flag "request")))           │
          (allow                                 │ → :allow "GET request (no mutating flags)"
           "GET request (no mutating flags)")))  │
                                                 │
  69: (rule "curl"                               │
        (ask                                     │ → :ask "Network operation requires approval"
         "Network operation requires approval")) │

Result

  curl https://example.com

  → :ask "Network operation requires approval"

  config: <config-path>
