tests/render/snapshots/render__migrated_v1_trace__curl_post_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                         command │ curl -d data https://example.com
                                          parser │ gnu  flags permute
  65: (rule "curl"                               │
        (when (and (not (flag "d"))              │
                   …                             │
                   …                             │
                   …)                            │
          (allow                                 │ → :allow "GET request (no mutating flags)"
           "GET request (no mutating flags)")))  │
                                                 │
  69: (rule "curl"                               │
        (ask                                     │ → :ask "Network operation requires approval"
         "Network operation requires approval")) │

Result

  curl -d data https://example.com

  → :ask "Network operation requires approval"

  config: <config-path>
