tests/render/snapshots/render__migrated_v1_trace__git_checkout_file_plan_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
Trace

                                                             command │ git checkout -- main.ts
                                                              parser │ gnu  flags permute
                                                               facts │ :opencode/agent "plan"
  43: (rule "git"                                                    │
        (when (and (positional "reset")                              │ "checkout" = "reset" → no
                   …)                                                │
          (ask "Dangerous git reset")))                              │ → :ask "Dangerous git reset"
                                                                     │
  47: (rule "git"                                                    │
        (when (or (positional "remote")                              │ "checkout" = "remote" → no
                  (positional                                        │
                   (or "clean" "gc"                                  │ "checkout" = "clean" → no
                       "push")))                                     │ "checkout" = "push" → no
          (ask "Dangerous git operation")))                          │ → :ask "Dangerous git operation"
                                                                     │
  52: (rule "git"                                                    │
        (when (and                                                   │
               (or (positional (or                                   │
                                "switch"                             │ "checkout" = "switch" → no
                                "restore"                            │ "checkout" = "restore" → no
                                …                                    │
                                "clone"))                            │ "checkout" = "clone" → no
                   (positional "checkout"                            │ "checkout" = "checkout" → yes
                               "--")                                 │ "--" = "--" → yes
                   …)                                                │
               (plan-mode                                            │ plan-mode → yes
                (or                                                  │
                 (fact?                                              │ no
                  [:claude-code/permission-mode                      │
                   "plan"])                                          │
                 (fact? [:opencode/agent                             │ yes
                         "plan"]))))                                 │
          (ask                                                       │ → :ask "git mutation requires approval in non-writing agents"
           "git mutation requires approval in non-writing agents"))) │
                                                                     │
  60: (rule "git"                                                    │
        (allow))                                                     │ → :allow

Result

  git checkout -- main.ts

  → :ask "git mutation requires approval in non-writing agents"

  config: <config-path>
