tests/render/snapshots/render__migrated_v1_trace__mv_force_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

                                  [2mcommand[0m [2m│[0m [1mmv -f a b[0m
                                   [2mparser[0m [2m│[0m gnu  flags permute
  [2m83: [0m[2m([0m[34mrule[0m [32m"mv"[0m                          [2m│[0m
        [2m([0m[34mif[0m [2m([0mor [2m([0mflag [32m"f"[0m[2m)[0m                [2m│[0m
                [2m…[0m[2m)[0m                        [2m│[0m
            [2m([0mask                          [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"Force move is destructive"[0m
             [32m"Force move is destructive"[0m[2m)[0m [2m│[0m
          [2m…[0m[2m)[0m[2m)[0m                             [2m│[0m

[1mResult[0m

  [4;33mmv -f a b[0m

  [2m→[0m [1;33m:ask[0m [32m"Force move is destructive"[0m

  config: <config-path>
