tests/render/snapshots/render__migrated_v1_trace__mv_force_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ mv -f a b
                                   parser │ gnu  flags permute
  83: (rule "mv"                          │
        (if (or (flag "f")                │
                …)                        │
            (ask                          │ → :ask "Force move is destructive"
             "Force move is destructive") │
          …))                             │

Result

  mv -f a b

  → :ask "Force move is destructive"

  config: <config-path>
