tests/render/snapshots/render__migrated_v1_trace__mv_normal_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                        command │ mv a b
                         parser │ gnu  flags permute
  83: (rule "mv"                │
        (if (or (flag "f")      │
                (flag "force")) │
            …                   │
          (allow)))             │ → :allow

Result

  mv a b

  → :allow

  config: <config-path>
